<resources>
    <string name="app_name">Carona Legal</string>

    <string name="title_activity_travel_detail">Detalhes da Viagem</string>
    <string name="title_activity_travel_list">Lista de viagens</string>
    <string name="title_activity_add_travel">Adicionar Viagem</string>
    <string name="travel_origin">Origem</string>
    <string name="travel_destination">Destino</string>
    <string name="travel_aperture_datetime">Data/Hora de Saída</string>
    <string name="travel_arrival_datetime">Data/Hora de Chegada</string>
    <string name="travel_aperture">Saída</string>
    <string name="travel_arrival">Chegada</string>
    <string name="travel_vacancies">Vagas</string>
    <string name="travel_vacancies_quant">Quantidade de vagas</string>
    <string name="travel_request_ride">Pedir carona</string>
    <string name="travel_request_made">Pedido de carona feito</string>
    <string name="travel_cancel_ride">Cancelar pedido carona</string>
    <string name="travel_request_cancelled">Pedido de carona cancelado</string>
    <string name="travel_cancel">Cancelar viagem</string>
    <string name="travel_cancelled">Viagem cancelada</string>
    <string name="travel_driver">Motorista</string>
    <string name="title_activity_user_travel_list">UserTravelListActivity</string>
    <string name="title_activity_travel_search">Pesquisar Viagem</string>
    <string name="travel_search">Pesquisar Viagens</string>
    <string name="title_activity_travel_search_results">Resultados da pesquisa</string>
    <string name="travel_request_sending">Enviando solicitação</string>
    <string name="travel_cancelling">Cancelando</string>
    <string name="travel_added">Viagem cadastrada</string>
    <string name="title_activity_user_profile_actvity">Perfil do Usuário</string>
    <string name="user_name">Nome</string>
    <string name="user_email">E-mail</string>
    <string name="user_phone">Telefone</string>
    <string name="profile_edit">Editar</string>
    <string name="save">Savlar</string>
    <string name="user_profile">Perfil</string>
    <string name="cancel">Cancelar</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="invalid_value">Valor inválido</string>
    <string name="user_profile_saved">Perfil salvo</string>
    <string name="user_logout">Sair</string>
</resources>
