<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifrn.tads.caronas.TravelDetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/travel_origin"
        android:id="@+id/travel_origin_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/travel_origin_text"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_origin_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/travel_destination"
        android:id="@+id/travel_destination_label"
        android:layout_below="@+id/travel_origin_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/travel_destination_text"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_destination_label"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_aperture_datetime"
        android:id="@+id/travel_aperture_label"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_destination_text"
     />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/travel_aperture_date_text"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_aperture_label"
        android:layout_alignParentLeft="true"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_arrival_datetime"
        android:id="@+id/travel_arrival_label"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_aperture_date_text"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/travel_arrival_date_text"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_arrival_label"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/travel_vacancies_label"
        android:text="@string/travel_vacancies_quant"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_arrival_date_text"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/travel_vacancies_text"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_vacancies_label"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/travel_driver_label"
        android:text="@string/travel_driver"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_vacancies_text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/travel_driver_text"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_driver_label"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel_request_ride"
        android:id="@+id/travel_ask_ride_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
