<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/travel_list_label_origin"
        android:text="@string/travel_origin"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/travel_list_text_origin"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_toRightOf="@+id/travel_list_label_origin"
        android:layout_alignParentRight="true"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/travel_list_label_destination"
        android:text="@string/travel_destination"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_list_label_origin"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/travel_list_text_destination"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_list_text_origin"
        android:layout_toRightOf="@+id/travel_list_label_destination"
        android:layout_alignParentRight="true"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/travel_list_label_aperture"
        android:text="@string/travel_aperture"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_list_label_destination"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/travel_list_text_aperture"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_list_text_destination"
        android:layout_toRightOf="@+id/travel_list_label_aperture"
        android:layout_alignParentRight="true"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/travel_list_label_arrival"
        android:text="@string/travel_arrival"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_list_label_aperture"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/travel_list_text_arrival"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_list_text_aperture"
        android:layout_toRightOf="@+id/travel_list_label_arrival"
        android:layout_alignParentRight="true"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/travel_list_label_vacancies"
        android:text="@string/travel_vacancies"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_list_label_arrival"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/travel_list_text_vacancies"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/travel_list_text_arrival"
        android:layout_toRightOf="@+id/travel_list_label_vacancies"
        android:layout_alignParentRight="true"/>
</RelativeLayout>